--- a/ipa_map_comparison/CMakeLists.txt
+++ b/ipa_map_comparison/CMakeLists.txt
@@ -12,6 +12,8 @@ find_package(catkin REQUIRED
     rostest
     std_msgs)
 
+add_service_files(DIRECTORY srv FILES
+                  StartMapEval.srv)
 
  generate_messages(
    DEPENDENCIES
