--- a/ipa_map_comparison/CMakeLists.txt
+++ b/ipa_map_comparison/CMakeLists.txt
@@ -23,6 +23,7 @@ add_service_files(DIRECTORY srv FILES
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES ipa_map_comparison
+  message_runtime
 )
 
 include_directories(include)
